[package]
name = "marcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
marc = "*"
chrono = "*"
serde = { version = "*", optional = true, features = ["derive"] }
num_enum = "0.5.4"
num-traits = "*"

[features]
default = []
serde_support = ["serde", "chrono/serde"]
